[gd_scene load_steps=2 format=3 uid="uid://pj6sf5yttwjm"]

[ext_resource type="Script" uid="uid://0xskxb8184f4" path="res://scripts/PauseMenu.gd" id="1_jvnd5"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jvnd5")

[node name="Panel" type="Panel" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
offset_left = -150.0
offset_right = 150.0
offset_bottom = 67.0
grow_horizontal = 2
text = "Settings"

[node name="MainMenuButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.42
anchor_right = 0.5
anchor_bottom = 0.42
offset_left = -150.0
offset_right = 150.0
offset_bottom = 67.0
grow_horizontal = 2
text = "Main Menu"

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.54
anchor_right = 0.5
anchor_bottom = 0.54
offset_left = -150.0
offset_right = 150.0
offset_bottom = 67.0
grow_horizontal = 2
text = "Exit To Desktop"

[node name="ResumeButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.18
anchor_right = 0.5
anchor_bottom = 0.18
offset_left = -150.0
offset_right = 150.0
offset_bottom = 67.0
grow_horizontal = 2
text = "Resume
"

[connection signal="pressed" from="Panel/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Panel/ResumeButton" to="." method="_on_resume_button_pressed"]
